[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/anima/components/AnimaChars.gd" type="Script" id=1]

[node name="AnimaChars" type="HBoxContainer"]
custom_constants/separation = 0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_rect_changed" from="." to="." method="_on_AnimaChars_item_rect_changed"]
